<?xml version="1.0" encoding="utf-8"?>
    <!-- xml -->
    <resources>
        <string name="app_name">Teste-de-Estudo</string>
        <string name="conecta_atleta">Conecta Atleta</string>
        <string name="conectando_atletas_e_patrocinadores">Conectando Atletas e Patrocinadores</string>
        <string name="login">Login</string>
        <string name="cadastre_se">Cadastre-se</string>
        <string name="sobre_nos">Sobre Nós</string>
        <string name="sobre_nos_intro">O esporte sempre foi uma poderosa ferramenta de transformação social. Ele une pessoas, promove saúde, desenvolve talentos e inspira sonhos. No entanto, muitos atletas, especialmente aqueles vindos de comunidades menos favorecidas, enfrentam obstáculos significativos para seguir sua trajetória esportiva. A falta de patrocínio e visibilidade os impede de alcançar seu verdadeiro potencial.\n\nEm momentos como as Olimpíadas, essa realidade fica ainda mais evidente. Enquanto alguns atletas contam com grandes estruturas e investimentos, outros lutam para se manter em atividade. Foi pensando nisso que surgiu a nossa iniciativa: uma plataforma de patrocínio popular para atletas da comunicação, com o objetivo de democratizar o acesso ao esporte e promover a inclusão.</string>
        <string name="sobre_nos_nossa_missao">Conectar atletas, fãs e patrocinadores em um espaço único, onde histórias inspiradoras possam ser compartilhadas, talentos valorizados e oportunidades ampliadas.</string>
        <string name="sobre_nos_tipos_patrocinio">Patrocínios Diretos: Empresas apoiam atletas ou projetos específicos.\n\n• Vaquinhas Populares: Apoios em valores menores vindos dos fãs.\n• Crowdfunding para Projetos: Financiamento para competições, equipamentos e conteúdo.</string>
        <string name="sobre_nos_ods_e_impacto">• ODS 10: Redução das desigualdades com mais acesso e visibilidade.\n• ODS 17: Parcerias entre atletas, fãs e empresas.\n• ODS 8: Renda digna e valorização da carreira esportiva.</string>
        <string name="tituloLogin">Entrar</string>
        <string name="inputEmail">Email</string>
        <string name="inputSenha">Senha</string>
        <string name="esqueci_minha_senha">Esqueci minha senha</string>
        <string name="btnEntrar">Entrar</string>
        <string name="sem_conta_cadastre_se">Não tem conta? Cadastre-se</string>
        <string name="txtcriar_conta">Criar Conta</string>
        <string name="inputNome_completo">Nome completo</string>
        <string name="inputEmailCadastrar">Email</string>
        <string name="rbAtleta">Atleta</string>
        <string name="rbApoiador">Apoiador</string>
        <string name="inputSenhaCadastrar">Senha</string>
        <string name="confirme_sua_senha">Confirme sua senha</string>
        <string name="Tem_conta_facalogin">Já tem conta? Faça login</string>
        <string name="btnInscrever">Inscrever</string>
        <string name="area_do_atleta">Área do Atleta</string>
        <string name="nome">Nome: --</string>
        <string name="modalidade">Modalidade: --</string>
        <string name="ver_treinos">Ver Treinos</string>
        <string name="meu_perfil">Meu Perfil</string>
        <string name="sair">Sair</string>
        <string name="bem_vindo">Bem-vindo! Você está na área do Apoiador</string>
    </resources>